--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: '1.20'
 
     - name: Build
-      run: go build -v -o bin/edmgen/edmgen cmd/edmgen/*.go
+      run: go build -v -o dist/edmgen/edmgen cmd/edmgen/*.go
 
     - name: Test
       run: go test -v ./...
